# lyric_ninja

./: .gitignore  README.md  main.py  pyproject.toml
data/raw_lyrics/: Papercut.txt
lyric_ninja/: __init__.py  cli.py
lyric_ninja/converter/: compile_model.py  coreml_converter.py
lyric_ninja/lyric_aligner/: aligner.py  aligner_new.py  aligner_new_new.py  aligner_new_new_new.py  aligner_new_new_new_new.py
lyric_ninja/vocal_enhancer/: enhancer.py
